css/style.css
@import "https://fonts.googleapis.com/css?family=Oswald";


body {
  padding-bottom: 30px;
  position: relative;
}
body,
html {
  height: 100%;
}
.nav .open > a,
.nav .open > a:hover,
.nav .open > a:focus {
  background-color: transparent;
}
.devicon-git-plain {
  max-width: 2em;
}
/* if you want to change the original color */
.devicon-git-plain path {
  fill: #4691f6;
}
/*-------------------------------*/
/*           Wrappers            */
/*-------------------------------*/
@media (min-width: 767px) {
  #wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
  }

  #wrapper.toggled {
    padding-left: 220px;
  }

  #sidebar-wrapper {
    z-index: 1000;
    left: 220px;
    width: 0;
    height: 100%;
    margin-left: -220px;
    overflow-y: auto;
    overflow-x: hidden;
    background: #1a1a1a;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
  }

  #sidebar-wrapper::-webkit-scrollbar {
    display: none;
  }

  #wrapper.toggled #sidebar-wrapper {
    width: 220px;
  }
}
/*-------------------------------*/
/*     Sidebar nav styles        */
/*-------------------------------*/
.nav .open>a {
  background-color: black;
}
@media (min-width: 767px) {
  .sidebar-nav {
    position: absolute;
    top: 0;
    width: 220px;
    margin: 0;
    padding: 0;
    list-style: none;
  }
  .sidebar-brand {
    margin-bottom: 150px;
    width: 100px;
    height: 100px;
    padding: 0 20px;
  }
  .sidebar-nav li {
    position: relative;
    line-height: 20px;
    display: inline-block;
    width: 100%;
  }
  .sidebar-nav li:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    height: 100%;
    width: 3px;
    background-color: #1c1c1c;
    -webkit-transition: width .2s ease-in;
    -moz-transition:  width .2s ease-in;
    -ms-transition:  width .2s ease-in;
    transition: width .2s ease-in;

  }
  .sidebar-nav li:first-child a {
    color: #fff;
    background-color: #1a1a1a;
  }
  .sidebar-nav li:nth-child(2):before {
    background-color: #ec1b5a;
  }
  .sidebar-nav li:nth-child(3):before {
    background-color: #79aefe;
  }
  .sidebar-nav li:nth-child(4):before {
    background-color: #314190;
  }
  .sidebar-nav li:nth-child(5):before {
    background-color: #279636;
  }
  .sidebar-nav li:nth-child(6):before {
    background-color: #7d5d81;
  }
  .sidebar-nav li:nth-child(7):before {
    background-color: #ead24c;
  }
  .sidebar-nav li:nth-child(8):before {
    background-color: #2d2366;
  }
  .sidebar-nav li:nth-child(9):before {
    background-color: #35acdf;
  }
  .sidebar-nav li:hover:before,
  .sidebar-nav li.open:hover:before {
    width: 100%;
    background-color:inherit;
    -webkit-transition: width .2s ease-in;
    -moz-transition:  width .2s ease-in;
    -ms-transition:  width .2s ease-in;
    transition: width .2s ease-in;
  }
  .sidebar-nav li a {
    display: block;
    color: #ead24c;
    text-decoration: none;
    padding: 10px 15px 10px 30px;
  }
  .sidebar-nav li a:hover {
    font-weight: bold;
    background-color: black !important;
  }
  .sidebar-nav li a:active,
  .sidebar-nav li a:focus,
  .sidebar-nav li.open a:hover,
  .sidebar-nav li.open a:active,
  .sidebar-nav li.open a:focus{
    color: #fff;
    text-decoration: none;
    background-color: black;
  }

  .sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 20px;
    line-height: 44px;
    color: white;
  }
  .sidebar-nav .dropdown-menu {
    position: relative;
    width: 100%;
    padding: 0;
    margin: 0;
    border-radius: 0;
    border: none;
    background-color: #222;
    box-shadow: none;
  }
}
@media (max-width: 766px) {
  .sidebar-brand{
    color: white;
  }
  .navbar {
    padding: 10px;
    text-align: center;
    margin: 0 !important;
  }
  .navbar-fixed-top {
    position: relative !important;
    right: 0;
    left: 0;
    z-index: 0;
  }
  a {
    font-size: 20px;
    font-weight: bold;
  }
}
a {
  color: white;
}
/*-------------------------------*/
/*       Hamburger-Cross         */
/*-------------------------------*/

.hamburger {
  position: fixed;
  top: 20px;
  z-index: 999;
  display: block;
  width: 32px;
  height: 32px;
  margin-left: 15px;
  background: transparent;
  border: none;
}
.hamburger:hover,
.hamburger:focus,
.hamburger:active {
  outline: none;
}
.hamburger.is-closed:before {
  content: '';
  display: block;
  width: 100px;
  font-size: 14px;
  color: #fff;
  line-height: 32px;
  text-align: center;
  opacity: 0;
  -webkit-transform: translate3d(0,0,0);
  -webkit-transition: all .35s ease-in-out;
}
.hamburger.is-closed:hover:before {
  opacity: 1;
  display: block;
  -webkit-transform: translate3d(-100px,0,0);
  -webkit-transition: all .35s ease-in-out;
}

.hamburger.is-closed .hamb-top,
.hamburger.is-closed .hamb-middle,
.hamburger.is-closed .hamb-bottom,
.hamburger.is-open .hamb-top,
.hamburger.is-open .hamb-middle,
.hamburger.is-open .hamb-bottom {
  position: absolute;
  left: 0;
  height: 4px;
  width: 100%;
}
.hamburger.is-closed .hamb-top,
.hamburger.is-closed .hamb-middle,
.hamburger.is-closed .hamb-bottom {
  /*background-color: #FF00CC;*/
  background-color: #ffff00;
}
@media (min-width: 767px) {
  .hamburger.is-closed .hamb-top {
    top: 5px;
    -webkit-transition: all .35s ease-in-out;
  }
  .hamburger.is-closed .hamb-middle {
    top: 50%;
    margin-top: -2px;
  }
  .hamburger.is-closed .hamb-bottom {
    bottom: 5px;
    -webkit-transition: all .35s ease-in-out;
  }

  .hamburger.is-closed:hover .hamb-top {
    top: 0;
    -webkit-transition: all .35s ease-in-out;
  }
  .hamburger.is-closed:hover .hamb-bottom {
    bottom: 0;
    -webkit-transition: all .35s ease-in-out;
  }
}
@media (max-width: 766px) {
  .hamburger {
    display: none;
  }
}
/* ... */

